test/corpus/declarations.txt
================================================================================
Grammar Rule declarations
================================================================================

grammar_rules = _{ SOI ~ grammar_doc* ~ grammar_rule* ~ EOI }

--------------------------------------------------------------------------------

    (pest
      (grammar_rule
        (identifier)
        (modifier)
        (expression
          (term
            (builtin))
          (infix_operator)
          (term
            (identifier)
            (postfix_operator))
          (infix_operator)
          (term
            (identifier)
            (postfix_operator))
          (infix_operator)
          (term
            (builtin)))))

================================================================================
Comment
================================================================================

// This is a comment
/// This is a documentation comment
//! This is a documentation comment

/*
    This is a block comment
*/

--------------------------------------------------------------------------------

(pest
    (line_comment)
    (line_comment)
    (line_comment)
    (block_comment))

================================================================================
PUSH | PEEK | POP
================================================================================

string = @{ PUSH("\"") ~ inner ~ POP }
inner  = @{ (!(PEEK | "\\") ~ ANY)* ~ (escape ~ inner)? }

--------------------------------------------------------------------------------

    (pest
      (grammar_rule
        (identifier)
        (modifier)
        (expression
          (term
            (push
              (expression
                (term
                  (string)))))
          (infix_operator)
          (term
            (identifier))
          (infix_operator)
          (term
            (builtin))))
      (grammar_rule
        (identifier)
        (modifier)
        (expression
          (term
            (expression
              (term
                (prefix_operator)
                (expression
                  (term
                    (builtin))
                  (infix_operator)
                  (term
                    (string))))
              (infix_operator)
              (term
                (builtin)))
            (postfix_operator))
          (infix_operator)
          (term
            (expression
              (term
                (identifier))
              (infix_operator)
              (term
                (identifier)))
            (postfix_operator)))))

================================================================================
Constants
================================================================================

number     = @{ "-"? ~ int ~ ("." ~ ASCII_DIGIT+ ~ exp? | exp)? }
int        = @{ "0" | ASCII_NONZERO_DIGIT ~ ASCII_DIGIT* }
exp        = @{ ("E" | "e") ~ ("+" | "-")? ~ ASCII_DIGIT+ }

--------------------------------------------------------------------------------

  (pest
      (grammar_rule
        (identifier)
        (modifier)
        (expression
          (term
            (string)
            (postfix_operator))
          (infix_operator)
          (term
            (identifier))
          (infix_operator)
          (term
            (expression
              (term
                (string))
              (infix_operator)
              (term
                (const)
                (postfix_operator))
              (infix_operator)
              (term
                (identifier)
                (postfix_operator))
              (infix_operator)
              (term
                (identifier)))
            (postfix_operator))))
      (grammar_rule
        (identifier)
        (modifier)
        (expression
          (term
            (string))
          (infix_operator)
          (term
            (const))
          (infix_operator)
          (term
            (const)
            (postfix_operator))))
      (grammar_rule
        (identifier)
        (modifier)
        (expression
          (term
            (expression
              (term
                (string))
              (infix_operator)
              (term
                (string))))
          (infix_operator)
          (term
            (expression
              (term
                (string))
              (infix_operator)
              (term
                (string)))
            (postfix_operator))
          (infix_operator)
          (term
            (const)
            (postfix_operator)))))

================================================================================
Uppercase rule names
================================================================================

WHITESPACE = _{ " " | "\t" | NEWLINE }
COMMENT = _{ "#" ~ (!NEWLINE ~ ANY)* }

--------------------------------------------------------------------------------

    (pest
      (grammar_rule
        (const)
        (modifier)
        (expression
          (term
            (string))
          (infix_operator)
          (term
            (string))
          (infix_operator)
          (term
            (builtin))))
      (grammar_rule
        (const)
        (modifier)
        (expression
          (term
            (string))
          (infix_operator)
          (term
            (expression
              (term
                (prefix_operator)
                (builtin))
              (infix_operator)
              (term
                (builtin)))
            (postfix_operator)))))

================================================================================
Non-atomic modifier
================================================================================

rule = !{ "hello" ~ world }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (modifier)
    (expression
      (term
        (string))
      (infix_operator)
      (term
        (identifier)))))

================================================================================
Repeat exact and range operators
================================================================================

rule = { "a"{3} ~ "b"{1,5} ~ "c"{2,} }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (expression
      (term
        (string)
        (postfix_operator))
      (infix_operator)
      (term
        (string)
        (postfix_operator))
      (infix_operator)
      (term
        (string)
        (postfix_operator)))))

================================================================================
CamelCase rule names
================================================================================

myRule = { "hello" }
MyRule = { "world" }
camelCaseRule = { "test" }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (expression
      (term
        (string))))
  (grammar_rule
    (identifier)
    (expression
      (term
        (string))))
  (grammar_rule
    (identifier)
    (expression
      (term
        (string)))))

================================================================================
PUSH_LITERAL
================================================================================

Quote = _{ _QuoteStart ~ QuoteChars ~ _QuoteEnd }
_QuoteStart = _{ "(" ~ PUSH_LITERAL(")") | "<" ~ PUSH_LITERAL(">") }
_QuoteEnd = _{ POP }
QuoteChars = { (!PEEK ~ ANY)* }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (modifier)
    (expression
      (term
        (identifier))
      (infix_operator)
      (term
        (identifier))
      (infix_operator)
      (term
        (identifier))))
  (grammar_rule
    (identifier)
    (modifier)
    (expression
      (term
        (string))
      (infix_operator)
      (term
        (push_literal
          (string)))
      (infix_operator)
      (term
        (string))
      (infix_operator)
      (term
        (push_literal
          (string)))))
  (grammar_rule
    (identifier)
    (modifier)
    (expression
      (term
        (builtin))))
  (grammar_rule
    (identifier)
    (expression
      (term
        (expression
          (term
            (prefix_operator)
            (builtin))
          (infix_operator)
          (term
            (builtin)))
        (postfix_operator)))))

================================================================================
Insensitive string
================================================================================

keyword = { ^"hello" ~ ^"world" }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (expression
      (term
        (insensitive_string
          (string)))
      (infix_operator)
      (term
        (insensitive_string
          (string))))))

================================================================================
PEEK slice with integers
================================================================================

rule = { PEEK[1..3] ~ PEEK[..2] ~ PEEK[1..] }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (expression
      (term
        (peek_slice))
      (infix_operator)
      (term
        (peek_slice))
      (infix_operator)
      (term
        (peek_slice)))))

================================================================================
Node tags
================================================================================

rule = { #tag1 = "hello" ~ #tag2 = other }

--------------------------------------------------------------------------------

(pest
  (grammar_rule
    (identifier)
    (expression
      (term
        (node_tag
          (tag_id))
        (string))
      (infix_operator)
      (term
        (node_tag
          (tag_id))
        (identifier)))))
